Cppgrammer.java
/* Generated By:JavaCC: Do not edit this line. Cppgrammer.java */
import syntaxtree.*;
import java.util.Vector;


public class Cppgrammer implements CppgrammerConstants {

  static final public Goal Goal() throws ParseException {
   NodeListOptional n0 = new NodeListOptional();
   Statement n1;
   NodeToken n2;
   Token n3;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case RPAREN:
      case LSQPAREN:
      case RSQPAREN:
      case LBRACE:
      case RBRACE:
      case AT:
      case HASH:
      case DEFINE:
      case IMPORT:
      case EXPORT:
      case MODULE:
      case QUOTE:
      case SEMICOLON:
      case COLON:
      case DOT:
      case COMMA:
      case ASSIGN:
      case LESS:
      case GREATER:
      case LE:
      case GE:
      case NE:
      case PLUS:
      case FLOAT:
      case MINUS:
      case MULT:
      case DIV:
      case AND:
      case OR:
      case PIPE:
      case BIT_AND:
      case NOT:
      case BOOLEAN:
      case CLASS:
      case INTERFACE:
      case ELSE:
      case EXTENDS:
      case FALSE:
      case IF:
      case WHILE:
      case INTEGER:
      case MAIN:
      case NEW:
      case PUBLIC:
      case RETURN:
      case STATIC:
      case STRING:
      case THIS:
      case TRUE:
      case PRINT:
      case VOID:
      case OBJECT:
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case STRING_LITERAL:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n1 = Statement();
        n0.addNode(n1);
    }
     n0.nodes.trimToSize();
    n3 = jj_consume_token(0);
      n3.beginColumn++; n3.endColumn++;
      n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new Goal(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
   NodeChoice n0;
   ModuleDeclaration n1;
   ImportStatement n2;
   ExportImportStatement n3;
   ModuleStatement n4;
   IncludeStatement n5;
   OtherStatement n6;
    if (jj_2_1(2147483647)) {
      n1 = ModuleDeclaration();
        n0 = new NodeChoice(n1, 0);
    } else if (jj_2_2(2147483647)) {
      n2 = ImportStatement();
        n0 = new NodeChoice(n2, 1);
    } else if (jj_2_3(2147483647)) {
      n3 = ExportImportStatement();
        n0 = new NodeChoice(n3, 2);
    } else if (jj_2_4(2147483647)) {
      n4 = ModuleStatement();
        n0 = new NodeChoice(n4, 3);
    } else if (jj_2_5(2147483647)) {
      n5 = IncludeStatement();
        n0 = new NodeChoice(n5, 4);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case RPAREN:
      case LSQPAREN:
      case RSQPAREN:
      case LBRACE:
      case RBRACE:
      case AT:
      case HASH:
      case DEFINE:
      case QUOTE:
      case SEMICOLON:
      case COLON:
      case DOT:
      case COMMA:
      case ASSIGN:
      case LESS:
      case GREATER:
      case LE:
      case GE:
      case NE:
      case PLUS:
      case FLOAT:
      case MINUS:
      case MULT:
      case DIV:
      case AND:
      case OR:
      case PIPE:
      case BIT_AND:
      case NOT:
      case BOOLEAN:
      case CLASS:
      case INTERFACE:
      case ELSE:
      case EXTENDS:
      case FALSE:
      case IF:
      case WHILE:
      case INTEGER:
      case MAIN:
      case NEW:
      case PUBLIC:
      case RETURN:
      case STATIC:
      case STRING:
      case THIS:
      case TRUE:
      case PRINT:
      case VOID:
      case OBJECT:
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case STRING_LITERAL:
      case IDENTIFIER:
        n6 = OtherStatement();
        n0 = new NodeChoice(n6, 5);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new Statement(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ModuleDeclaration ModuleDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   DotIdentifier n4;
   NodeToken n5;
   Token n6;
    n1 = jj_consume_token(EXPORT);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(MODULE);
                 n2 = JTBToolkit.makeNodeToken(n3);
    n4 = DotIdentifier();
    n6 = jj_consume_token(SEMICOLON);
            n5 = JTBToolkit.makeNodeToken(n6);
     {if (true) return new ModuleDeclaration(n0,n2,n4,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public ImportStatement ImportStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   DotIdentifier n2;
   NodeToken n3;
   Token n4;
    n1 = jj_consume_token(IMPORT);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n2 = DotIdentifier();
    n4 = jj_consume_token(SEMICOLON);
            n3 = JTBToolkit.makeNodeToken(n4);
     {if (true) return new ImportStatement(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public ExportImportStatement ExportImportStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   DotIdentifier n4;
   NodeToken n5;
   Token n6;
    n1 = jj_consume_token(EXPORT);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(IMPORT);
                 n2 = JTBToolkit.makeNodeToken(n3);
    n4 = DotIdentifier();
    n6 = jj_consume_token(SEMICOLON);
            n5 = JTBToolkit.makeNodeToken(n6);
     {if (true) return new ExportImportStatement(n0,n2,n4,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public ModuleStatement ModuleStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   DotIdentifier n2;
   NodeToken n3;
   Token n4;
    n1 = jj_consume_token(MODULE);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n2 = DotIdentifier();
    n4 = jj_consume_token(SEMICOLON);
            n3 = JTBToolkit.makeNodeToken(n4);
     {if (true) return new ModuleStatement(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public IncludeStatement IncludeStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeChoice n4;
   NodeToken n5;
   Token n6;
   Include n7;
    n1 = jj_consume_token(HASH);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(INCLUDE);
                  n2 = JTBToolkit.makeNodeToken(n3);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_LITERAL:
      n6 = jj_consume_token(STRING_LITERAL);
                               n5 = JTBToolkit.makeNodeToken(n6);
           n4 = new NodeChoice(n5, 0);
      break;
    case LESS:
      n7 = Include();
           n4 = new NodeChoice(n7, 1);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new IncludeStatement(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public Include Include() throws ParseException {
   NodeToken n0;
   Token n1;
   DotIdentifier n2;
   NodeToken n3;
   Token n4;
    n1 = jj_consume_token(LESS);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = DotIdentifier();
    n4 = jj_consume_token(GREATER);
            n3 = JTBToolkit.makeNodeToken(n4);
     {if (true) return new Include(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public DotIdentifier DotIdentifier() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeListOptional n2 = new NodeListOptional();
   RemainingIdentifier n3;
    n1 = jj_consume_token(IDENTIFIER);
                     n0 = JTBToolkit.makeNodeToken(n1);
    label_2:
    while (true) {
      if (jj_2_6(2147483647)) {
        ;
      } else {
        break label_2;
      }
      n3 = RemainingIdentifier();
        n2.addNode(n3);
    }
     n2.nodes.trimToSize();
     {if (true) return new DotIdentifier(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public RemainingIdentifier RemainingIdentifier() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeChoice n2;
   Identifier n3;
   Asterisk n4;
    n1 = jj_consume_token(DOT);
            n0 = JTBToolkit.makeNodeToken(n1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      n3 = Identifier();
           n2 = new NodeChoice(n3, 0);
      break;
    case MULT:
      n4 = Asterisk();
           n2 = new NodeChoice(n4, 1);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new RemainingIdentifier(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public Asterisk Asterisk() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(MULT);
               n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new Asterisk(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public OtherStatement OtherStatement() throws ParseException {
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
   NodeToken n13;
   Token n14;
   NodeToken n15;
   Token n16;
   NodeToken n17;
   Token n18;
   NodeToken n19;
   Token n20;
   NodeToken n21;
   Token n22;
   NodeToken n23;
   Token n24;
   NodeToken n25;
   Token n26;
   NodeToken n27;
   Token n28;
   NodeToken n29;
   Token n30;
   NodeToken n31;
   Token n32;
   NodeToken n33;
   Token n34;
   NodeToken n35;
   Token n36;
   NodeToken n37;
   Token n38;
   NodeToken n39;
   Token n40;
   NodeToken n41;
   Token n42;
   NodeToken n43;
   Token n44;
   NodeToken n45;
   Token n46;
   NodeToken n47;
   Token n48;
   NodeToken n49;
   Token n50;
   NodeToken n51;
   Token n52;
   NodeToken n53;
   Token n54;
   NodeToken n55;
   Token n56;
   NodeToken n57;
   Token n58;
   NodeToken n59;
   Token n60;
   NodeToken n61;
   Token n62;
   NodeToken n63;
   Token n64;
   NodeToken n65;
   Token n66;
   NodeToken n67;
   Token n68;
   NodeToken n69;
   Token n70;
   NodeToken n71;
   Token n72;
   NodeToken n73;
   Token n74;
   NodeToken n75;
   Token n76;
   NodeToken n77;
   Token n78;
   NodeToken n79;
   Token n80;
   NodeToken n81;
   Token n82;
   NodeToken n83;
   Token n84;
   NodeToken n85;
   Token n86;
   NodeToken n87;
   Token n88;
   NodeToken n89;
   Token n90;
   NodeToken n91;
   Token n92;
   NodeToken n93;
   Token n94;
   NodeToken n95;
   Token n96;
   NodeToken n97;
   Token n98;
   NodeToken n99;
   Token n100;
   NodeToken n101;
   Token n102;
   NodeToken n103;
   Token n104;
   NodeToken n105;
   Token n106;
   NodeToken n107;
   Token n108;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      n2 = jj_consume_token(LPAREN);
                    n1 = JTBToolkit.makeNodeToken(n2);
        n0 = new NodeChoice(n1, 0);
      break;
    case RPAREN:
      n4 = jj_consume_token(RPAREN);
                    n3 = JTBToolkit.makeNodeToken(n4);
        n0 = new NodeChoice(n3, 1);
      break;
    case LSQPAREN:
      n6 = jj_consume_token(LSQPAREN);
                      n5 = JTBToolkit.makeNodeToken(n6);
        n0 = new NodeChoice(n5, 2);
      break;
    case RSQPAREN:
      n8 = jj_consume_token(RSQPAREN);
                      n7 = JTBToolkit.makeNodeToken(n8);
        n0 = new NodeChoice(n7, 3);
      break;
    case LBRACE:
      n10 = jj_consume_token(LBRACE);
                     n9 = JTBToolkit.makeNodeToken(n10);
        n0 = new NodeChoice(n9, 4);
      break;
    case RBRACE:
      n12 = jj_consume_token(RBRACE);
                     n11 = JTBToolkit.makeNodeToken(n12);
        n0 = new NodeChoice(n11, 5);
      break;
    case AT:
      n14 = jj_consume_token(AT);
                 n13 = JTBToolkit.makeNodeToken(n14);
        n0 = new NodeChoice(n13, 6);
      break;
    case HASH:
      n16 = jj_consume_token(HASH);
                   n15 = JTBToolkit.makeNodeToken(n16);
        n0 = new NodeChoice(n15, 7);
      break;
    case DEFINE:
      n18 = jj_consume_token(DEFINE);
                     n17 = JTBToolkit.makeNodeToken(n18);
        n0 = new NodeChoice(n17, 8);
      break;
    case QUOTE:
      n20 = jj_consume_token(QUOTE);
                    n19 = JTBToolkit.makeNodeToken(n20);
        n0 = new NodeChoice(n19, 9);
      break;
    case SEMICOLON:
      n22 = jj_consume_token(SEMICOLON);
                        n21 = JTBToolkit.makeNodeToken(n22);
        n0 = new NodeChoice(n21, 10);
      break;
    case COLON:
      n24 = jj_consume_token(COLON);
                    n23 = JTBToolkit.makeNodeToken(n24);
        n0 = new NodeChoice(n23, 11);
      break;
    case DOT:
      n26 = jj_consume_token(DOT);
                  n25 = JTBToolkit.makeNodeToken(n26);
        n0 = new NodeChoice(n25, 12);
      break;
